[package]
name = "ciborium-rpc"
version = "0.1.0"
authors = ["Will Woods <will@profian.com>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["serde1"]
serde1 = ["serde"]

[dependencies]
ciborium = { version = "0.2" }
bytes = "1"
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional=true }

[build-dependencies]

[dev-dependencies]